src/test/deca/context/invalid/homemade/modulo_non_entiers_decompile.res
{
	float a = 2;
	float b = 7;
	(b = (b % a));
}
